--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/jmayenberger/bootdev_Pokedex#readme",
   "devDependencies": {
     "@types/node": "^24.0.10",
+    "mock-stdin": "^1.0.0",
     "typescript": "^5.8.3",
     "vitest": "^3.2.4"
   }
